// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ViewGroupPage databases tab details view should match snapshot (manager) 1`] = `
<div class="page" mock-v-loading="false">
  <div class="page-content">
    <!---->
    <div class="header-row">
      <div class="header-names">
        <h1>group name</h1>
        <h2 class="ml-3 text-gray-600">
          (groupShortName)
        </h2>
      </div>
      <div class="header-buttons">
        <!---->
        <!---->
      </div>
      <!---->
    </div>
    <div class="with-badges el-tabs el-tabs--top">
      <div class="el-tabs__header is-top">
        <div class="el-tabs__nav-wrap is-top">
          <div class="el-tabs__nav-scroll">
            <div role="tablist" class="el-tabs__nav is-top" style="transform: translateX(-0px);">
              <div class="el-tabs__active-bar is-top" style="width: 0px; transform: translateX(NaNpx); webkit-transform: translateX(NaNpx);"></div>
              <div id="tab-description" aria-controls="pane-description" role="tab" tabindex="-1" class="el-tabs__item is-top">Description</div>
              <div id="tab-datasets" aria-controls="pane-datasets" role="tab" tabindex="-1" class="el-tabs__item is-top">Datasets (4)</div>
              <div id="tab-members" aria-controls="pane-members" role="tab" tabindex="-1" class="el-tabs__item is-top"><span>
          Members (2)
          <!----></span></div>
              <div id="tab-databases" aria-controls="pane-databases" role="tab" aria-selected="true" tabindex="0" class="el-tabs__item is-top is-active"><span><div class="el-badge sm-feature-badge">
            Databases (2)
          <transition-stub name="el-zoom-in-center"><sup class="el-badge__content el-badge__content--undefined is-fixed">New</sup></transition-stub></div></span></div>
              <div id="tab-settings" aria-controls="pane-settings" role="tab" tabindex="-1" class="el-tabs__item is-top">Settings</div>
            </div>
          </div>
        </div>
      </div>
      <div class="el-tabs__content">
        <!---->
        <!---->
        <!---->
        <div role="tabpanel" id="pane-databases" aria-labelledby="tab-databases" class="el-tab-pane">
          <div>
            <transition-stub mode="out-in" enterclass="opacity-0" leavetoclass="opacity-0" enteractiveclass="duration-150 transition-opacity ease-in-out" leaveactiveclass="duration-150 transition-opacity ease-in-out">
              <transition-stub mode="out-in" enterclass="opacity-0" leavetoclass="opacity-0" enteractiveclass="duration-150 transition-opacity ease-in-out" leaveactiveclass="duration-150 transition-opacity ease-in-out">
                <div class="relative leading-6 h2-leading-12" mock-v-loading="true">
                  <div class="absolute top-0 left-0 h-12 flex items-center"><a href="#" class="font-medium text-gray-800 hover:text-primary button-reset text-sm no-underline"><span class="flex items-center -mt-1"><!----><span class="leading-none mt-1">All databases</span></span></a></div>
                  <div class="max-w-measure-3 mx-auto mt-6 mb-18">
                    <div class="flex justify-between items-center">
                      <h2 title="foo - v1" class="truncate">foo <small class="text-gray-700 font-normal">v1</small></h2><button type="button" class="el-button el-button--default ml-3">
                        <!---->
                        <!----><span>Upload new version</span></button>
                    </div>
                    <form action="#" class="sm-form v-rhythm-6 mt-3">
                      <div><label for="database-full-name"><span class="text-base font-medium">Full name</span></label>
                        <div class="el-input">
                          <!----><input type="text" autocomplete="off" id="database-full-name" class="el-input__inner">
                          <!---->
                          <!---->
                          <!---->
                          <!---->
                        </div>
                      </div>
                      <div class="sm-RichText sm-RichTextArea relative"><label><span class="text-base font-medium">Description</span></label>
                        <div class="h-40 w-full box-border overflow-y-auto cursor-text text-gray-800 text-sm rounded border border-solid transition-colors ease-in-out duration-200 border-gray-300 hover:border-gray-500 focus-within:border-primary mt-1">
                          <div contenteditable="true" tabindex="0" class="ProseMirror">
                            <p><br></p>
                          </div>
                        </div>
                        <div class="absolute bg-white rounded p-1 border border-solid border-gray-100 shadow mb-2 transform -translate-x-1/2 transition-fade ease-in-out duration-150 invisible opacity-0" style="left: 0px; bottom: 0px;"><span class="flex items-start justify-center"><button title="Bold (Ctrl+B)" class="button-reset mr-1 last:mr-0 h-8 w-8 inline-flex items-center justify-center rounded-sm text-gray-600 hover:bg-gray-100 focus:bg-gray-100"><svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24" class="fill-current"><path d="M0 0h24v24H0V0z" fill="none"></path><path d="M15.6 10.79c.97-.67 1.65-1.77 1.65-2.79 0-2.26-1.75-4-4-4H8c-.55 0-1 .45-1 1v12c0 .55.45 1 1 1h5.78c2.07 0 3.96-1.69 3.97-3.77.01-1.53-.85-2.84-2.15-3.44zM10 6.5h3c.83 0 1.5.67 1.5 1.5s-.67 1.5-1.5 1.5h-3v-3zm3.5 9H10v-3h3.5c.83 0 1.5.67 1.5 1.5s-.67 1.5-1.5 1.5z"></path></svg></button><button title="Italic (Ctrl+I)" class="button-reset mr-1 last:mr-0 h-8 w-8 inline-flex items-center justify-center rounded-sm text-gray-600 hover:bg-gray-100 focus:bg-gray-100"><svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24" class="fill-current"><path d="M0 0h24v24H0V0z" fill="none"></path><path d="M10 5.5c0 .83.67 1.5 1.5 1.5h.71l-3.42 8H7.5c-.83 0-1.5.67-1.5 1.5S6.67 18 7.5 18h5c.83 0 1.5-.67 1.5-1.5s-.67-1.5-1.5-1.5h-.71l3.42-8h1.29c.83 0 1.5-.67 1.5-1.5S17.33 4 16.5 4h-5c-.83 0-1.5.67-1.5 1.5z"></path></svg></button><button title="Underline (Ctrl+U)" class="button-reset mr-1 last:mr-0 h-8 w-8 inline-flex items-center justify-center rounded-sm text-gray-600 hover:bg-gray-100 focus:bg-gray-100"><svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24" class="fill-current"><path d="M0 0h24v24H0V0z" fill="none"></path><path d="M12.79 16.95c3.03-.39 5.21-3.11 5.21-6.16V4.25C18 3.56 17.44 3 16.75 3s-1.25.56-1.25 1.25v6.65c0 1.67-1.13 3.19-2.77 3.52-2.25.47-4.23-1.25-4.23-3.42V4.25C8.5 3.56 7.94 3 7.25 3S6 3.56 6 4.25V11c0 3.57 3.13 6.42 6.79 5.95zM5 20c0 .55.45 1 1 1h12c.55 0 1-.45 1-1s-.45-1-1-1H6c-.55 0-1 .45-1 1z"></path></svg></button><button title="Title" class="button-reset mr-1 last:mr-0 h-8 w-8 inline-flex items-center justify-center rounded-sm text-gray-600 hover:bg-gray-100 focus:bg-gray-100"><svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24" class="fill-current"><path d="M0 0h24v24H0V0z" fill="none"></path><path d="M5 5.5C5 6.33 5.67 7 6.5 7h4v10.5c0 .83.67 1.5 1.5 1.5s1.5-.67 1.5-1.5V7h4c.83 0 1.5-.67 1.5-1.5S18.33 4 17.5 4h-11C5.67 4 5 4.67 5 5.5z"></path></svg></button><button title="Bullet list" class="button-reset mr-1 last:mr-0 h-8 w-8 inline-flex items-center justify-center rounded-sm text-gray-600 hover:bg-gray-100 focus:bg-gray-100"><svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24" class="fill-current"><path d="M0 0h24v24H0V0z" fill="none"></path><path d="M4 10.5c-.83 0-1.5.67-1.5 1.5s.67 1.5 1.5 1.5 1.5-.67 1.5-1.5-.67-1.5-1.5-1.5zm0-6c-.83 0-1.5.67-1.5 1.5S3.17 7.5 4 7.5 5.5 6.83 5.5 6 4.83 4.5 4 4.5zm0 12c-.83 0-1.5.68-1.5 1.5s.68 1.5 1.5 1.5 1.5-.68 1.5-1.5-.67-1.5-1.5-1.5zM8 19h12c.55 0 1-.45 1-1s-.45-1-1-1H8c-.55 0-1 .45-1 1s.45 1 1 1zm0-6h12c.55 0 1-.45 1-1s-.45-1-1-1H8c-.55 0-1 .45-1 1s.45 1 1 1zM7 6c0 .55.45 1 1 1h12c.55 0 1-.45 1-1s-.45-1-1-1H8c-.55 0-1 .45-1 1z"></path></svg></button><button title="Subscript" class="button-reset mr-1 last:mr-0 h-8 w-8 inline-flex items-center justify-center rounded-sm text-gray-600 hover:bg-gray-100 focus:bg-gray-100"><span class="text-lg font-bold tracking-wider">H<sub class="text-xs leading-none">2</sub></span></button><button title="Superscript" class="button-reset mr-1 last:mr-0 h-8 w-8 inline-flex items-center justify-center rounded-sm text-gray-600 hover:bg-gray-100 focus:bg-gray-100"><span class="text-lg font-bold">x<sup class="text-xs leading-none">2</sup></span></button></span></div>
                      </div>
                      <div class="flex items-center">
                        <div role="switch" class="el-switch mr-6"><input type="checkbox" id="database-public" name="" true-value="true" class="el-switch__input">
                          <!----><span class="el-switch__core" style="width: 40px;"></span>
                          <!---->
                        </div>
                        <transition-stub mode="out-in" enterclass="opacity-0" leavetoclass="opacity-0" enteractiveclass="duration-150 transition-opacity ease-in-out" leaveactiveclass="duration-150 transition-opacity ease-in-out" class="duration-200 cursor-pointer"><label for="database-public"><span class="text-base font-medium">Annotations are private</span><span class="block text-sm text-gray-800">Results will be visible to group members only</span></label></transition-stub>
                      </div>
                      <div><label for="database-link"><span class="text-base font-medium">Link</span></label>
                        <div class="el-input">
                          <!----><input type="text" autocomplete="off" id="database-link" class="el-input__inner">
                          <!---->
                          <!---->
                          <!---->
                          <!---->
                        </div>
                      </div>
                      <div class="sm-RichText sm-RichTextArea relative"><label><span class="text-base font-medium">Citation</span></label>
                        <div class="h-40 w-full box-border overflow-y-auto cursor-text text-gray-800 text-sm rounded border border-solid transition-colors ease-in-out duration-200 border-gray-300 hover:border-gray-500 focus-within:border-primary mt-1">
                          <div contenteditable="true" tabindex="0" class="ProseMirror">
                            <p><br></p>
                          </div>
                        </div>
                        <div class="absolute bg-white rounded p-1 border border-solid border-gray-100 shadow mb-2 transform -translate-x-1/2 transition-fade ease-in-out duration-150 invisible opacity-0" style="left: 0px; bottom: 0px;"><span class="flex items-start justify-center"><button title="Bold (Ctrl+B)" class="button-reset mr-1 last:mr-0 h-8 w-8 inline-flex items-center justify-center rounded-sm text-gray-600 hover:bg-gray-100 focus:bg-gray-100"><svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24" class="fill-current"><path d="M0 0h24v24H0V0z" fill="none"></path><path d="M15.6 10.79c.97-.67 1.65-1.77 1.65-2.79 0-2.26-1.75-4-4-4H8c-.55 0-1 .45-1 1v12c0 .55.45 1 1 1h5.78c2.07 0 3.96-1.69 3.97-3.77.01-1.53-.85-2.84-2.15-3.44zM10 6.5h3c.83 0 1.5.67 1.5 1.5s-.67 1.5-1.5 1.5h-3v-3zm3.5 9H10v-3h3.5c.83 0 1.5.67 1.5 1.5s-.67 1.5-1.5 1.5z"></path></svg></button><button title="Italic (Ctrl+I)" class="button-reset mr-1 last:mr-0 h-8 w-8 inline-flex items-center justify-center rounded-sm text-gray-600 hover:bg-gray-100 focus:bg-gray-100"><svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24" class="fill-current"><path d="M0 0h24v24H0V0z" fill="none"></path><path d="M10 5.5c0 .83.67 1.5 1.5 1.5h.71l-3.42 8H7.5c-.83 0-1.5.67-1.5 1.5S6.67 18 7.5 18h5c.83 0 1.5-.67 1.5-1.5s-.67-1.5-1.5-1.5h-.71l3.42-8h1.29c.83 0 1.5-.67 1.5-1.5S17.33 4 16.5 4h-5c-.83 0-1.5.67-1.5 1.5z"></path></svg></button><button title="Underline (Ctrl+U)" class="button-reset mr-1 last:mr-0 h-8 w-8 inline-flex items-center justify-center rounded-sm text-gray-600 hover:bg-gray-100 focus:bg-gray-100"><svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24" class="fill-current"><path d="M0 0h24v24H0V0z" fill="none"></path><path d="M12.79 16.95c3.03-.39 5.21-3.11 5.21-6.16V4.25C18 3.56 17.44 3 16.75 3s-1.25.56-1.25 1.25v6.65c0 1.67-1.13 3.19-2.77 3.52-2.25.47-4.23-1.25-4.23-3.42V4.25C8.5 3.56 7.94 3 7.25 3S6 3.56 6 4.25V11c0 3.57 3.13 6.42 6.79 5.95zM5 20c0 .55.45 1 1 1h12c.55 0 1-.45 1-1s-.45-1-1-1H6c-.55 0-1 .45-1 1z"></path></svg></button><button title="Title" class="button-reset mr-1 last:mr-0 h-8 w-8 inline-flex items-center justify-center rounded-sm text-gray-600 hover:bg-gray-100 focus:bg-gray-100"><svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24" class="fill-current"><path d="M0 0h24v24H0V0z" fill="none"></path><path d="M5 5.5C5 6.33 5.67 7 6.5 7h4v10.5c0 .83.67 1.5 1.5 1.5s1.5-.67 1.5-1.5V7h4c.83 0 1.5-.67 1.5-1.5S18.33 4 17.5 4h-11C5.67 4 5 4.67 5 5.5z"></path></svg></button><button title="Bullet list" class="button-reset mr-1 last:mr-0 h-8 w-8 inline-flex items-center justify-center rounded-sm text-gray-600 hover:bg-gray-100 focus:bg-gray-100"><svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24" class="fill-current"><path d="M0 0h24v24H0V0z" fill="none"></path><path d="M4 10.5c-.83 0-1.5.67-1.5 1.5s.67 1.5 1.5 1.5 1.5-.67 1.5-1.5-.67-1.5-1.5-1.5zm0-6c-.83 0-1.5.67-1.5 1.5S3.17 7.5 4 7.5 5.5 6.83 5.5 6 4.83 4.5 4 4.5zm0 12c-.83 0-1.5.68-1.5 1.5s.68 1.5 1.5 1.5 1.5-.68 1.5-1.5-.67-1.5-1.5-1.5zM8 19h12c.55 0 1-.45 1-1s-.45-1-1-1H8c-.55 0-1 .45-1 1s.45 1 1 1zm0-6h12c.55 0 1-.45 1-1s-.45-1-1-1H8c-.55 0-1 .45-1 1s.45 1 1 1zM7 6c0 .55.45 1 1 1h12c.55 0 1-.45 1-1s-.45-1-1-1H8c-.55 0-1 .45-1 1z"></path></svg></button><button title="Subscript" class="button-reset mr-1 last:mr-0 h-8 w-8 inline-flex items-center justify-center rounded-sm text-gray-600 hover:bg-gray-100 focus:bg-gray-100"><span class="text-lg font-bold tracking-wider">H<sub class="text-xs leading-none">2</sub></span></button><button title="Superscript" class="button-reset mr-1 last:mr-0 h-8 w-8 inline-flex items-center justify-center rounded-sm text-gray-600 hover:bg-gray-100 focus:bg-gray-100"><span class="text-lg font-bold">x<sup class="text-xs leading-none">2</sup></span></button></span></div>
                      </div><button class="el-button el-button--primary">Update details</button>
                    </form>
                    <transition-stub mode="out-in" enterclass="opacity-0" leavetoclass="opacity-0" enteractiveclass="duration-150 transition-opacity ease-in-out" leaveactiveclass="duration-150 transition-opacity ease-in-out" class="mt-12">
                      <form class="margin-reset mt-12">
                        <h2>Archive database</h2>
                        <p>Database will not be available for dataset processing.</p><button type="button" class="el-button el-button--default mt-5">
                          <!---->
                          <!----><span>Archive database</span></button>
                      </form>
                    </transition-stub>
                    <form class="margin-reset mt-12">
                      <h2>Delete database</h2>
                      <p>Unprocessed dataset jobs using this database will also be removed.</p><button type="button" class="el-button el-button--danger mt-5">
                        <!---->
                        <!----><span>Delete database</span></button>
                    </form>
                  </div>
                </div>
              </transition-stub>
            </transition-stub>
          </div>
        </div>
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`ViewGroupPage databases tab details view should match snapshot (member) 1`] = `
<div class="page" mock-v-loading="false">
  <div class="page-content">
    <!---->
    <div class="header-row">
      <div class="header-names">
        <h1>group name</h1>
        <h2 class="ml-3 text-gray-600">
          (groupShortName)
        </h2>
      </div>
      <div class="header-buttons">
        <!---->
        <!---->
      </div>
      <!---->
    </div>
    <div class="with-badges el-tabs el-tabs--top">
      <div class="el-tabs__header is-top">
        <div class="el-tabs__nav-wrap is-top">
          <div class="el-tabs__nav-scroll">
            <div role="tablist" class="el-tabs__nav is-top" style="transform: translateX(-0px);">
              <div class="el-tabs__active-bar is-top" style="width: 0px; transform: translateX(NaNpx); webkit-transform: translateX(NaNpx);"></div>
              <div id="tab-description" aria-controls="pane-description" role="tab" tabindex="-1" class="el-tabs__item is-top">Description</div>
              <div id="tab-datasets" aria-controls="pane-datasets" role="tab" tabindex="-1" class="el-tabs__item is-top">Datasets (4)</div>
              <div id="tab-members" aria-controls="pane-members" role="tab" tabindex="-1" class="el-tabs__item is-top"><span>
          Members (2)
          <!----></span></div>
              <div id="tab-databases" aria-controls="pane-databases" role="tab" aria-selected="true" tabindex="0" class="el-tabs__item is-top is-active"><span><div class="el-badge sm-feature-badge">
            Databases (2)
          <transition-stub name="el-zoom-in-center"><sup class="el-badge__content el-badge__content--undefined is-fixed">New</sup></transition-stub></div></span></div>
            </div>
          </div>
        </div>
      </div>
      <div class="el-tabs__content">
        <!---->
        <!---->
        <!---->
        <div role="tabpanel" id="pane-databases" aria-labelledby="tab-databases" class="el-tab-pane">
          <div>
            <transition-stub mode="out-in" enterclass="opacity-0" leavetoclass="opacity-0" enteractiveclass="duration-150 transition-opacity ease-in-out" leaveactiveclass="duration-150 transition-opacity ease-in-out">
              <transition-stub mode="out-in" enterclass="opacity-0" leavetoclass="opacity-0" enteractiveclass="duration-150 transition-opacity ease-in-out" leaveactiveclass="duration-150 transition-opacity ease-in-out">
                <div class="relative leading-6 h2-leading-12" mock-v-loading="true">
                  <div class="absolute top-0 left-0 h-12 flex items-center"><a href="#" class="font-medium text-gray-800 hover:text-primary button-reset text-sm no-underline"><span class="flex items-center -mt-1"><!----><span class="leading-none mt-1">All databases</span></span></a></div>
                  <div class="max-w-measure-3 mx-auto mt-6 mb-18">
                    <div class="flex justify-between items-center">
                      <h2 title="foo - v1" class="truncate">foo <small class="text-gray-700 font-normal">v1</small></h2><button type="button" class="el-button el-button--default ml-3">
                        <!---->
                        <!----><span>Upload new version</span></button>
                    </div>
                    <form action="#" class="sm-form v-rhythm-6 mt-3">
                      <div><label for="database-full-name"><span class="text-base font-medium">Full name</span></label>
                        <div class="el-input">
                          <!----><input type="text" autocomplete="off" id="database-full-name" class="el-input__inner">
                          <!---->
                          <!---->
                          <!---->
                          <!---->
                        </div>
                      </div>
                      <div class="sm-RichText sm-RichTextArea relative"><label><span class="text-base font-medium">Description</span></label>
                        <div class="h-40 w-full box-border overflow-y-auto cursor-text text-gray-800 text-sm rounded border border-solid transition-colors ease-in-out duration-200 border-gray-300 hover:border-gray-500 focus-within:border-primary mt-1">
                          <div contenteditable="true" tabindex="0" class="ProseMirror">
                            <p><br></p>
                          </div>
                        </div>
                        <div class="absolute bg-white rounded p-1 border border-solid border-gray-100 shadow mb-2 transform -translate-x-1/2 transition-fade ease-in-out duration-150 invisible opacity-0" style="left: 0px; bottom: 0px;"><span class="flex items-start justify-center"><button title="Bold (Ctrl+B)" class="button-reset mr-1 last:mr-0 h-8 w-8 inline-flex items-center justify-center rounded-sm text-gray-600 hover:bg-gray-100 focus:bg-gray-100"><svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24" class="fill-current"><path d="M0 0h24v24H0V0z" fill="none"></path><path d="M15.6 10.79c.97-.67 1.65-1.77 1.65-2.79 0-2.26-1.75-4-4-4H8c-.55 0-1 .45-1 1v12c0 .55.45 1 1 1h5.78c2.07 0 3.96-1.69 3.97-3.77.01-1.53-.85-2.84-2.15-3.44zM10 6.5h3c.83 0 1.5.67 1.5 1.5s-.67 1.5-1.5 1.5h-3v-3zm3.5 9H10v-3h3.5c.83 0 1.5.67 1.5 1.5s-.67 1.5-1.5 1.5z"></path></svg></button><button title="Italic (Ctrl+I)" class="button-reset mr-1 last:mr-0 h-8 w-8 inline-flex items-center justify-center rounded-sm text-gray-600 hover:bg-gray-100 focus:bg-gray-100"><svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24" class="fill-current"><path d="M0 0h24v24H0V0z" fill="none"></path><path d="M10 5.5c0 .83.67 1.5 1.5 1.5h.71l-3.42 8H7.5c-.83 0-1.5.67-1.5 1.5S6.67 18 7.5 18h5c.83 0 1.5-.67 1.5-1.5s-.67-1.5-1.5-1.5h-.71l3.42-8h1.29c.83 0 1.5-.67 1.5-1.5S17.33 4 16.5 4h-5c-.83 0-1.5.67-1.5 1.5z"></path></svg></button><button title="Underline (Ctrl+U)" class="button-reset mr-1 last:mr-0 h-8 w-8 inline-flex items-center justify-center rounded-sm text-gray-600 hover:bg-gray-100 focus:bg-gray-100"><svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24" class="fill-current"><path d="M0 0h24v24H0V0z" fill="none"></path><path d="M12.79 16.95c3.03-.39 5.21-3.11 5.21-6.16V4.25C18 3.56 17.44 3 16.75 3s-1.25.56-1.25 1.25v6.65c0 1.67-1.13 3.19-2.77 3.52-2.25.47-4.23-1.25-4.23-3.42V4.25C8.5 3.56 7.94 3 7.25 3S6 3.56 6 4.25V11c0 3.57 3.13 6.42 6.79 5.95zM5 20c0 .55.45 1 1 1h12c.55 0 1-.45 1-1s-.45-1-1-1H6c-.55 0-1 .45-1 1z"></path></svg></button><button title="Title" class="button-reset mr-1 last:mr-0 h-8 w-8 inline-flex items-center justify-center rounded-sm text-gray-600 hover:bg-gray-100 focus:bg-gray-100"><svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24" class="fill-current"><path d="M0 0h24v24H0V0z" fill="none"></path><path d="M5 5.5C5 6.33 5.67 7 6.5 7h4v10.5c0 .83.67 1.5 1.5 1.5s1.5-.67 1.5-1.5V7h4c.83 0 1.5-.67 1.5-1.5S18.33 4 17.5 4h-11C5.67 4 5 4.67 5 5.5z"></path></svg></button><button title="Bullet list" class="button-reset mr-1 last:mr-0 h-8 w-8 inline-flex items-center justify-center rounded-sm text-gray-600 hover:bg-gray-100 focus:bg-gray-100"><svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24" class="fill-current"><path d="M0 0h24v24H0V0z" fill="none"></path><path d="M4 10.5c-.83 0-1.5.67-1.5 1.5s.67 1.5 1.5 1.5 1.5-.67 1.5-1.5-.67-1.5-1.5-1.5zm0-6c-.83 0-1.5.67-1.5 1.5S3.17 7.5 4 7.5 5.5 6.83 5.5 6 4.83 4.5 4 4.5zm0 12c-.83 0-1.5.68-1.5 1.5s.68 1.5 1.5 1.5 1.5-.68 1.5-1.5-.67-1.5-1.5-1.5zM8 19h12c.55 0 1-.45 1-1s-.45-1-1-1H8c-.55 0-1 .45-1 1s.45 1 1 1zm0-6h12c.55 0 1-.45 1-1s-.45-1-1-1H8c-.55 0-1 .45-1 1s.45 1 1 1zM7 6c0 .55.45 1 1 1h12c.55 0 1-.45 1-1s-.45-1-1-1H8c-.55 0-1 .45-1 1z"></path></svg></button><button title="Subscript" class="button-reset mr-1 last:mr-0 h-8 w-8 inline-flex items-center justify-center rounded-sm text-gray-600 hover:bg-gray-100 focus:bg-gray-100"><span class="text-lg font-bold tracking-wider">H<sub class="text-xs leading-none">2</sub></span></button><button title="Superscript" class="button-reset mr-1 last:mr-0 h-8 w-8 inline-flex items-center justify-center rounded-sm text-gray-600 hover:bg-gray-100 focus:bg-gray-100"><span class="text-lg font-bold">x<sup class="text-xs leading-none">2</sup></span></button></span></div>
                      </div>
                      <div class="flex items-center">
                        <div role="switch" class="el-switch mr-6"><input type="checkbox" id="database-public" name="" true-value="true" class="el-switch__input">
                          <!----><span class="el-switch__core" style="width: 40px;"></span>
                          <!---->
                        </div>
                        <transition-stub mode="out-in" enterclass="opacity-0" leavetoclass="opacity-0" enteractiveclass="duration-150 transition-opacity ease-in-out" leaveactiveclass="duration-150 transition-opacity ease-in-out" class="duration-200 cursor-pointer"><label for="database-public"><span class="text-base font-medium">Annotations are private</span><span class="block text-sm text-gray-800">Results will be visible to group members only</span></label></transition-stub>
                      </div>
                      <div><label for="database-link"><span class="text-base font-medium">Link</span></label>
                        <div class="el-input">
                          <!----><input type="text" autocomplete="off" id="database-link" class="el-input__inner">
                          <!---->
                          <!---->
                          <!---->
                          <!---->
                        </div>
                      </div>
                      <div class="sm-RichText sm-RichTextArea relative"><label><span class="text-base font-medium">Citation</span></label>
                        <div class="h-40 w-full box-border overflow-y-auto cursor-text text-gray-800 text-sm rounded border border-solid transition-colors ease-in-out duration-200 border-gray-300 hover:border-gray-500 focus-within:border-primary mt-1">
                          <div contenteditable="true" tabindex="0" class="ProseMirror">
                            <p><br></p>
                          </div>
                        </div>
                        <div class="absolute bg-white rounded p-1 border border-solid border-gray-100 shadow mb-2 transform -translate-x-1/2 transition-fade ease-in-out duration-150 invisible opacity-0" style="left: 0px; bottom: 0px;"><span class="flex items-start justify-center"><button title="Bold (Ctrl+B)" class="button-reset mr-1 last:mr-0 h-8 w-8 inline-flex items-center justify-center rounded-sm text-gray-600 hover:bg-gray-100 focus:bg-gray-100"><svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24" class="fill-current"><path d="M0 0h24v24H0V0z" fill="none"></path><path d="M15.6 10.79c.97-.67 1.65-1.77 1.65-2.79 0-2.26-1.75-4-4-4H8c-.55 0-1 .45-1 1v12c0 .55.45 1 1 1h5.78c2.07 0 3.96-1.69 3.97-3.77.01-1.53-.85-2.84-2.15-3.44zM10 6.5h3c.83 0 1.5.67 1.5 1.5s-.67 1.5-1.5 1.5h-3v-3zm3.5 9H10v-3h3.5c.83 0 1.5.67 1.5 1.5s-.67 1.5-1.5 1.5z"></path></svg></button><button title="Italic (Ctrl+I)" class="button-reset mr-1 last:mr-0 h-8 w-8 inline-flex items-center justify-center rounded-sm text-gray-600 hover:bg-gray-100 focus:bg-gray-100"><svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24" class="fill-current"><path d="M0 0h24v24H0V0z" fill="none"></path><path d="M10 5.5c0 .83.67 1.5 1.5 1.5h.71l-3.42 8H7.5c-.83 0-1.5.67-1.5 1.5S6.67 18 7.5 18h5c.83 0 1.5-.67 1.5-1.5s-.67-1.5-1.5-1.5h-.71l3.42-8h1.29c.83 0 1.5-.67 1.5-1.5S17.33 4 16.5 4h-5c-.83 0-1.5.67-1.5 1.5z"></path></svg></button><button title="Underline (Ctrl+U)" class="button-reset mr-1 last:mr-0 h-8 w-8 inline-flex items-center justify-center rounded-sm text-gray-600 hover:bg-gray-100 focus:bg-gray-100"><svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24" class="fill-current"><path d="M0 0h24v24H0V0z" fill="none"></path><path d="M12.79 16.95c3.03-.39 5.21-3.11 5.21-6.16V4.25C18 3.56 17.44 3 16.75 3s-1.25.56-1.25 1.25v6.65c0 1.67-1.13 3.19-2.77 3.52-2.25.47-4.23-1.25-4.23-3.42V4.25C8.5 3.56 7.94 3 7.25 3S6 3.56 6 4.25V11c0 3.57 3.13 6.42 6.79 5.95zM5 20c0 .55.45 1 1 1h12c.55 0 1-.45 1-1s-.45-1-1-1H6c-.55 0-1 .45-1 1z"></path></svg></button><button title="Title" class="button-reset mr-1 last:mr-0 h-8 w-8 inline-flex items-center justify-center rounded-sm text-gray-600 hover:bg-gray-100 focus:bg-gray-100"><svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24" class="fill-current"><path d="M0 0h24v24H0V0z" fill="none"></path><path d="M5 5.5C5 6.33 5.67 7 6.5 7h4v10.5c0 .83.67 1.5 1.5 1.5s1.5-.67 1.5-1.5V7h4c.83 0 1.5-.67 1.5-1.5S18.33 4 17.5 4h-11C5.67 4 5 4.67 5 5.5z"></path></svg></button><button title="Bullet list" class="button-reset mr-1 last:mr-0 h-8 w-8 inline-flex items-center justify-center rounded-sm text-gray-600 hover:bg-gray-100 focus:bg-gray-100"><svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24" class="fill-current"><path d="M0 0h24v24H0V0z" fill="none"></path><path d="M4 10.5c-.83 0-1.5.67-1.5 1.5s.67 1.5 1.5 1.5 1.5-.67 1.5-1.5-.67-1.5-1.5-1.5zm0-6c-.83 0-1.5.67-1.5 1.5S3.17 7.5 4 7.5 5.5 6.83 5.5 6 4.83 4.5 4 4.5zm0 12c-.83 0-1.5.68-1.5 1.5s.68 1.5 1.5 1.5 1.5-.68 1.5-1.5-.67-1.5-1.5-1.5zM8 19h12c.55 0 1-.45 1-1s-.45-1-1-1H8c-.55 0-1 .45-1 1s.45 1 1 1zm0-6h12c.55 0 1-.45 1-1s-.45-1-1-1H8c-.55 0-1 .45-1 1s.45 1 1 1zM7 6c0 .55.45 1 1 1h12c.55 0 1-.45 1-1s-.45-1-1-1H8c-.55 0-1 .45-1 1z"></path></svg></button><button title="Subscript" class="button-reset mr-1 last:mr-0 h-8 w-8 inline-flex items-center justify-center rounded-sm text-gray-600 hover:bg-gray-100 focus:bg-gray-100"><span class="text-lg font-bold tracking-wider">H<sub class="text-xs leading-none">2</sub></span></button><button title="Superscript" class="button-reset mr-1 last:mr-0 h-8 w-8 inline-flex items-center justify-center rounded-sm text-gray-600 hover:bg-gray-100 focus:bg-gray-100"><span class="text-lg font-bold">x<sup class="text-xs leading-none">2</sup></span></button></span></div>
                      </div><button class="el-button el-button--primary">Update details</button>
                    </form>
                    <transition-stub mode="out-in" enterclass="opacity-0" leavetoclass="opacity-0" enteractiveclass="duration-150 transition-opacity ease-in-out" leaveactiveclass="duration-150 transition-opacity ease-in-out" class="mt-12">
                      <form class="margin-reset mt-12">
                        <h2>Archive database</h2>
                        <p>Database will not be available for dataset processing.</p><button type="button" class="el-button el-button--default mt-5">
                          <!---->
                          <!----><span>Archive database</span></button>
                      </form>
                    </transition-stub>
                  </div>
                </div>
              </transition-stub>
            </transition-stub>
          </div>
        </div>
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`ViewGroupPage databases tab should match snapshot 1`] = `
<div class="page" mock-v-loading="false">
  <div class="page-content">
    <!---->
    <div class="header-row">
      <div class="header-names">
        <h1>group name</h1>
        <h2 class="ml-3 text-gray-600">
          (groupShortName)
        </h2>
      </div>
      <div class="header-buttons">
        <!---->
        <!---->
      </div>
      <!---->
    </div>
    <div class="with-badges el-tabs el-tabs--top">
      <div class="el-tabs__header is-top">
        <div class="el-tabs__nav-wrap is-top">
          <div class="el-tabs__nav-scroll">
            <div role="tablist" class="el-tabs__nav is-top" style="transform: translateX(-0px);">
              <div class="el-tabs__active-bar is-top" style="width: 0px; transform: translateX(NaNpx); webkit-transform: translateX(NaNpx);"></div>
              <div id="tab-description" aria-controls="pane-description" role="tab" tabindex="-1" class="el-tabs__item is-top">Description</div>
              <div id="tab-datasets" aria-controls="pane-datasets" role="tab" tabindex="-1" class="el-tabs__item is-top">Datasets (4)</div>
              <div id="tab-members" aria-controls="pane-members" role="tab" tabindex="-1" class="el-tabs__item is-top"><span>
          Members (2)
          <!----></span></div>
              <div id="tab-databases" aria-controls="pane-databases" role="tab" aria-selected="true" tabindex="0" class="el-tabs__item is-top is-active"><span><div class="el-badge sm-feature-badge">
            Databases (2)
          <transition-stub name="el-zoom-in-center"><sup class="el-badge__content el-badge__content--undefined is-fixed">New</sup></transition-stub></div></span></div>
            </div>
          </div>
        </div>
      </div>
      <div class="el-tabs__content">
        <!---->
        <!---->
        <!---->
        <div role="tabpanel" id="pane-databases" aria-labelledby="tab-databases" class="el-tab-pane">
          <div>
            <transition-stub mode="out-in" enterclass="opacity-0" leavetoclass="opacity-0" enteractiveclass="duration-150 transition-opacity ease-in-out" leaveactiveclass="duration-150 transition-opacity ease-in-out">
              <div>
                <header class="flex justify-between items-center py-3">
                  <div class="flex items-center">
                    <!---->
                    <p class="m-0 ml-1 text-sm leading-5 text-gray-700">Databases are only available to members of this group.<br>You can choose to make derived annotations visible to others.</p>
                  </div><button type="button" class="el-button el-button--primary">
                    <!---->
                    <!----><span>Upload Database</span></button>
                </header>
                <div class="el-table el-table--fit el-table--scrollable-x el-table--enable-row-hover el-table--enable-row-transition" style="width: 100%;" mock-v-loading="false">
                  <div class="hidden-columns">
                    <div></div>
                    <div></div>
                    <div></div>
                    <div></div>
                  </div>
                  <div class="el-table__header-wrapper">
                    <table cellspacing="0" cellpadding="0" border="0" class="el-table__header" style="width: 576px;">
                      <colgroup>
                        <col name="el-table_1_column_1" width="144">
                        <col name="el-table_1_column_2" width="144">
                        <col name="el-table_1_column_3" width="144">
                        <col name="el-table_1_column_4" width="144">
                      </colgroup>
                      <thead class="">
                        <tr class="">
                          <th colspan="1" rowspan="1" class="el-table_1_column_1     is-leaf is-sortable">
                            <div class="cell">Name<span class="caret-wrapper"><i class="sort-caret ascending"></i><i class="sort-caret descending"></i></span></div>
                          </th>
                          <th colspan="1" rowspan="1" class="el-table_1_column_2 descending    is-leaf is-sortable">
                            <div class="cell">Uploaded<span class="caret-wrapper"><i class="sort-caret ascending"></i><i class="sort-caret descending"></i></span></div>
                          </th>
                          <th colspan="1" rowspan="1" class="el-table_1_column_3  is-center   is-leaf">
                            <div class="cell">Results public</div>
                          </th>
                          <th colspan="1" rowspan="1" class="el-table_1_column_4  is-center   is-leaf">
                            <div class="cell">Archived</div>
                          </th>
                        </tr>
                      </thead>
                    </table>
                  </div>
                  <div class="el-table__body-wrapper is-scrolling-left">
                    <table cellspacing="0" cellpadding="0" border="0" class="el-table__body" style="width: 576px;">
                      <colgroup>
                        <col name="el-table_1_column_1" width="144">
                        <col name="el-table_1_column_2" width="144">
                        <col name="el-table_1_column_3" width="144">
                        <col name="el-table_1_column_4" width="144">
                      </colgroup>
                      <tbody>
                        <tr class="el-table__row cursor-pointer">
                          <td rowspan="1" colspan="1" class="el-table_1_column_1  ">
                            <div class="cell"><span><span class="text-body font-medium">bar</span> <span class="text-gray-700">v1</span></span></div>
                          </td>
                          <td rowspan="1" colspan="1" class="el-table_1_column_2  ">
                            <div class="cell">
                              <mock-elapsed-time date="group.molecularDatabases.1.createdDT"></mock-elapsed-time>
                            </div>
                          </td>
                          <td rowspan="1" colspan="1" class="el-table_1_column_3 is-center ">
                            <div class="cell"><span class="flex justify-center items-center h-5"><!----></span></div>
                          </td>
                          <td rowspan="1" colspan="1" class="el-table_1_column_4 is-center ">
                            <div class="cell"><span class="flex justify-center items-center h-5"></span></div>
                          </td>
                        </tr>
                        <tr class="el-table__row cursor-pointer">
                          <td rowspan="1" colspan="1" class="el-table_1_column_1  ">
                            <div class="cell"><span><span class="text-body font-medium">foo</span> <span class="text-gray-700">v1</span></span></div>
                          </td>
                          <td rowspan="1" colspan="1" class="el-table_1_column_2  ">
                            <div class="cell">
                              <mock-elapsed-time date="group.molecularDatabases.0.createdDT"></mock-elapsed-time>
                            </div>
                          </td>
                          <td rowspan="1" colspan="1" class="el-table_1_column_3 is-center ">
                            <div class="cell"><span class="flex justify-center items-center h-5"></span></div>
                          </td>
                          <td rowspan="1" colspan="1" class="el-table_1_column_4 is-center ">
                            <div class="cell"><span class="flex justify-center items-center h-5"><!----></span></div>
                          </td>
                        </tr>
                        <!---->
                      </tbody>
                    </table>
                    <!---->
                    <!---->
                  </div>
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <div class="el-table__column-resize-proxy" style="display: none;"></div>
                </div>
              </div>
            </transition-stub>
          </div>
        </div>
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`ViewGroupPage datasets tab should match snapshot (non-member) 1`] = `
<div class="page" mock-v-loading="false">
  <div class="page-content">
    <!---->
    <div class="header-row">
      <div class="header-names">
        <h1>group name</h1>
        <h2 class="ml-3 text-gray-600">
          (groupShortName)
        </h2>
      </div>
      <div class="header-buttons"><button type="button" class="el-button el-button--primary">
          <!---->
          <!----><span>
          Request access
        </span></button>
        <!---->
      </div>
      <!---->
    </div>
    <div class="with-badges el-tabs el-tabs--top">
      <div class="el-tabs__header is-top">
        <div class="el-tabs__nav-wrap is-top">
          <div class="el-tabs__nav-scroll">
            <div role="tablist" class="el-tabs__nav is-top" style="transform: translateX(-0px);">
              <div class="el-tabs__active-bar is-top" style="width: 0px; transform: translateX(NaNpx); webkit-transform: translateX(NaNpx);"></div>
              <div id="tab-description" aria-controls="pane-description" role="tab" tabindex="-1" class="el-tabs__item is-top">Description</div>
              <div id="tab-datasets" aria-controls="pane-datasets" role="tab" aria-selected="true" tabindex="0" class="el-tabs__item is-top is-active">Datasets (4)</div>
              <div id="tab-members" aria-controls="pane-members" role="tab" tabindex="-1" class="el-tabs__item is-top"><span>
          Members (2)
          <!----></span></div>
            </div>
          </div>
        </div>
      </div>
      <div class="el-tabs__content">
        <!---->
        <div role="tabpanel" id="pane-datasets" aria-labelledby="tab-datasets" class="el-tab-pane">
          <div class="dataset-list">
            <datasetitem-stub dataset="[object Object]" current-user="[object Object]" idx="0" hide-group-menu="true"></datasetitem-stub>
            <datasetitem-stub dataset="[object Object]" current-user="[object Object]" idx="1" hide-group-menu="true"></datasetitem-stub>
            <datasetitem-stub dataset="[object Object]" current-user="[object Object]" idx="2" hide-group-menu="true"></datasetitem-stub>
            <!---->
          </div>
          <div class="dataset-list-footer"><a href="/datasets?grp=00000000-1111-2222-3333-444444444444" class="">
              See all datasets
            </a></div>
        </div>
        <!---->
        <!---->
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`ViewGroupPage members tab should match snapshot (invited) 1`] = `
<div class="page" mock-v-loading="false">
  <div class="page-content">
    <!---->
    <div class="header-row">
      <div class="header-names">
        <h1>group name</h1>
        <h2 class="ml-3 text-gray-600">
          (groupShortName)
        </h2>
      </div>
      <div class="header-buttons">
        <!---->
        <!---->
      </div>
      <transition-stub name="el-alert-fade">
        <div role="alert" class="el-alert el-alert--info is-light"><i class="el-alert__icon el-icon-info is-big"></i>
          <div class="el-alert__content">
            <!---->
            <p class="el-alert__description">
              <div style="padding: 0px 0px 20px 20px;">
                <p>
                  You have been invited to join group name.
                </p>
                <div><button type="button" class="el-button el-button--danger">
                    <!---->
                    <!----><span>
              Decline invitation
            </span></button> <button type="button" class="el-button el-button--primary">
                    <!---->
                    <!----><span>
              Join group
            </span></button></div>
              </div>
            </p>
            <!----><i class="el-alert__closebtn el-icon-close" style="display: none;"></i>
          </div>
        </div>
      </transition-stub>
    </div>
    <div class="with-badges el-tabs el-tabs--top">
      <div class="el-tabs__header is-top">
        <div class="el-tabs__nav-wrap is-top">
          <div class="el-tabs__nav-scroll">
            <div role="tablist" class="el-tabs__nav is-top" style="transform: translateX(-0px);">
              <div class="el-tabs__active-bar is-top" style="width: 0px; transform: translateX(NaNpx); webkit-transform: translateX(NaNpx);"></div>
              <div id="tab-description" aria-controls="pane-description" role="tab" tabindex="-1" class="el-tabs__item is-top">Description</div>
              <div id="tab-datasets" aria-controls="pane-datasets" role="tab" tabindex="-1" class="el-tabs__item is-top">Datasets (4)</div>
              <div id="tab-members" aria-controls="pane-members" role="tab" aria-selected="true" tabindex="0" class="el-tabs__item is-top is-active"><span>
          Members (2)
          <!----></span></div>
            </div>
          </div>
        </div>
      </div>
      <div class="el-tabs__content">
        <!---->
        <!---->
        <div role="tabpanel" id="pane-members" aria-labelledby="tab-members" class="el-tab-pane">
          <groupmemberslist-stub currentuser="[object Object]" group="[object Object]" members="[object Object]" refreshdata="function () { [native code] }"></groupmemberslist-stub>
          <p class="hidden-members-text">
            + 1 hidden member.
          </p>
        </div>
        <!---->
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`ViewGroupPage members tab should match snapshot (manager, including table) 1`] = `
<div class="page" mock-v-loading="false">
  <div class="page-content">
    <!---->
    <div class="header-row">
      <div class="header-names">
        <h1>group name</h1>
        <h2 class="ml-3 text-gray-600">
          (groupShortName)
        </h2>
      </div>
      <div class="header-buttons">
        <!---->
        <!---->
      </div>
      <!---->
    </div>
    <div class="with-badges el-tabs el-tabs--top">
      <div class="el-tabs__header is-top">
        <div class="el-tabs__nav-wrap is-top">
          <div class="el-tabs__nav-scroll">
            <div role="tablist" class="el-tabs__nav is-top" style="transform: translateX(-0px);">
              <div class="el-tabs__active-bar is-top" style="width: 0px; transform: translateX(NaNpx); webkit-transform: translateX(NaNpx);"></div>
              <div id="tab-description" aria-controls="pane-description" role="tab" tabindex="-1" class="el-tabs__item is-top">Description</div>
              <div id="tab-datasets" aria-controls="pane-datasets" role="tab" tabindex="-1" class="el-tabs__item is-top">Datasets (4)</div>
              <div id="tab-members" aria-controls="pane-members" role="tab" aria-selected="true" tabindex="0" class="el-tabs__item is-top is-active"><span>
          Members (2)
          <span class="notification"></span></span></div>
              <div id="tab-databases" aria-controls="pane-databases" role="tab" tabindex="-1" class="el-tabs__item is-top"><span><div class="el-badge sm-feature-badge">
            Databases (2)
          <transition-stub name="el-zoom-in-center"><sup class="el-badge__content el-badge__content--undefined is-fixed">New</sup></transition-stub></div></span></div>
              <div id="tab-settings" aria-controls="pane-settings" role="tab" tabindex="-1" class="el-tabs__item is-top">Settings</div>
            </div>
          </div>
        </div>
      </div>
      <div class="el-tabs__content">
        <!---->
        <!---->
        <div role="tabpanel" id="pane-members" aria-labelledby="tab-members" class="el-tab-pane">
          <div>
            <!---->
            <div class="el-table el-table--fit el-table--scrollable-x el-table--enable-row-hover el-table--enable-row-transition" element-loading-text="Loading results from the server..." mock-v-loading="false">
              <div class="hidden-columns">
                <div></div>
                <div></div>
                <div></div>
                <div></div>
                <div></div>
              </div>
              <div class="el-table__header-wrapper">
                <table cellspacing="0" cellpadding="0" border="0" class="el-table__header" style="width: 850px;">
                  <colgroup>
                    <col name="el-table_1_column_1" width="200">
                    <col name="el-table_1_column_2" width="200">
                    <col name="el-table_1_column_3" width="160">
                    <col name="el-table_1_column_4" width="90">
                    <col name="el-table_1_column_5" width="200">
                  </colgroup>
                  <thead class="">
                    <tr class="">
                      <th colspan="1" rowspan="1" class="el-table_1_column_1     is-leaf">
                        <div class="cell">Name</div>
                      </th>
                      <th colspan="1" rowspan="1" class="el-table_1_column_2     is-leaf">
                        <div class="cell">Email</div>
                      </th>
                      <th colspan="1" rowspan="1" class="el-table_1_column_3     is-leaf">
                        <div class="cell">Role</div>
                      </th>
                      <th colspan="1" rowspan="1" class="el-table_1_column_4  is-center   is-leaf">
                        <div class="cell">Datasets</div>
                      </th>
                      <th colspan="1" rowspan="1" class="el-table_1_column_5     is-leaf">
                        <div class="cell"></div>
                      </th>
                    </tr>
                  </thead>
                </table>
              </div>
              <div class="el-table__body-wrapper is-scrolling-left">
                <table cellspacing="0" cellpadding="0" border="0" class="el-table__body" style="width: 850px;">
                  <colgroup>
                    <col name="el-table_1_column_1" width="200">
                    <col name="el-table_1_column_2" width="200">
                    <col name="el-table_1_column_3" width="160">
                    <col name="el-table_1_column_4" width="90">
                    <col name="el-table_1_column_5" width="200">
                  </colgroup>
                  <tbody>
                    <tr class="el-table__row">
                      <td rowspan="1" colspan="1" class="el-table_1_column_1  ">
                        <div class="cell">
                          me
                        </div>
                      </td>
                      <td rowspan="1" colspan="1" class="el-table_1_column_2  ">
                        <div class="cell">
                          my-email@example.com
                        </div>
                      </td>
                      <td rowspan="1" colspan="1" class="el-table_1_column_3  ">
                        <div class="cell"><a href="#" title="Change role">
                            Group admin
                          </a></div>
                      </td>
                      <td rowspan="1" colspan="1" class="el-table_1_column_4 is-center ">
                        <div class="cell"><a href="/datasets?grp=00000000-1111-2222-3333-444444444444&amp;subm=3" class="">
                            123
                          </a></div>
                      </td>
                      <td rowspan="1" colspan="1" class="el-table_1_column_5  ">
                        <div class="cell">
                          <!---->
                          <!---->
                          <!---->
                          <!---->
                        </div>
                      </td>
                    </tr>
                    <tr class="el-table__row">
                      <td rowspan="1" colspan="1" class="el-table_1_column_1  ">
                        <div class="cell">
                          Person who asked to join
                        </div>
                      </td>
                      <td rowspan="1" colspan="1" class="el-table_1_column_2  ">
                        <div class="cell">
                          access@requestor.com
                        </div>
                      </td>
                      <td rowspan="1" colspan="1" class="el-table_1_column_3  ">
                        <div class="cell"><span>
          Requesting access
        </span></div>
                      </td>
                      <td rowspan="1" colspan="1" class="el-table_1_column_4 is-center ">
                        <div class="cell"><a href="/datasets?grp=00000000-1111-2222-3333-444444444444&amp;subm=4" class="">
                            0
                          </a></div>
                      </td>
                      <td rowspan="1" colspan="1" class="el-table_1_column_5  ">
                        <div class="cell">
                          <!---->
                          <!----> <button type="button" class="el-button grid-button el-button--success el-button--mini">
                            <!---->
                            <!----><span>
          Accept
        </span></button> <button type="button" class="el-button grid-button el-button--default el-button--mini">
                            <!---->
                            <!----><span>
          Decline
        </span></button></div>
                      </td>
                    </tr>
                    <tr class="el-table__row">
                      <td rowspan="1" colspan="1" class="el-table_1_column_1  ">
                        <div class="cell">
                          Invitee
                        </div>
                      </td>
                      <td rowspan="1" colspan="1" class="el-table_1_column_2  ">
                        <div class="cell">
                          awaiting@response.com
                        </div>
                      </td>
                      <td rowspan="1" colspan="1" class="el-table_1_column_3  ">
                        <div class="cell"><span>
          Invited
        </span></div>
                      </td>
                      <td rowspan="1" colspan="1" class="el-table_1_column_4 is-center ">
                        <div class="cell"><a href="/datasets?grp=00000000-1111-2222-3333-444444444444&amp;subm=5" class="">
                            0
                          </a></div>
                      </td>
                      <td rowspan="1" colspan="1" class="el-table_1_column_5  ">
                        <div class="cell">
                          <!----> <button type="button" class="el-button grid-button el-button--default el-button--mini">
                            <!---->
                            <!----><span>
          Cancel
        </span></button>
                          <!---->
                          <!---->
                        </div>
                      </td>
                    </tr>
                    <tr class="el-table__row">
                      <td rowspan="1" colspan="1" class="el-table_1_column_1  ">
                        <div class="cell">
                          Project member
                        </div>
                      </td>
                      <td rowspan="1" colspan="1" class="el-table_1_column_2  ">
                        <div class="cell">
                          person@embl.de
                        </div>
                      </td>
                      <td rowspan="1" colspan="1" class="el-table_1_column_3  ">
                        <div class="cell"><a href="#" title="Change role">
                            Member
                          </a></div>
                      </td>
                      <td rowspan="1" colspan="1" class="el-table_1_column_4 is-center ">
                        <div class="cell"><a href="/datasets?grp=00000000-1111-2222-3333-444444444444&amp;subm=6" class="">
                            1
                          </a></div>
                      </td>
                      <td rowspan="1" colspan="1" class="el-table_1_column_5  ">
                        <div class="cell"><button type="button" class="el-button grid-button el-button--default el-button--mini">
                            <!---->
                            <!----><span>
          Remove
        </span></button>
                          <!---->
                          <!---->
                          <!---->
                        </div>
                      </td>
                    </tr>
                    <!---->
                  </tbody>
                </table>
                <!---->
                <!---->
              </div>
              <!---->
              <!---->
              <!---->
              <!---->
              <div class="el-table__column-resize-proxy" style="display: none;"></div>
            </div>
            <div class="pagination-row">
              <!---->
              <div class="flex-spacer"></div> <button type="button" class="el-button el-button--default">
                <!---->
                <!----><span>
      Add member
    </span></button>
            </div>
          </div>
          <!---->
        </div>
        <!---->
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`ViewGroupPage members tab should match snapshot (member) 1`] = `
<div class="page" mock-v-loading="false">
  <div class="page-content">
    <!---->
    <div class="header-row">
      <div class="header-names">
        <h1>group name</h1>
        <h2 class="ml-3 text-gray-600">
          (groupShortName)
        </h2>
      </div>
      <div class="header-buttons">
        <!---->
        <!---->
      </div>
      <!---->
    </div>
    <div class="with-badges el-tabs el-tabs--top">
      <div class="el-tabs__header is-top">
        <div class="el-tabs__nav-wrap is-top">
          <div class="el-tabs__nav-scroll">
            <div role="tablist" class="el-tabs__nav is-top" style="transform: translateX(-0px);">
              <div class="el-tabs__active-bar is-top" style="width: 0px; transform: translateX(NaNpx); webkit-transform: translateX(NaNpx);"></div>
              <div id="tab-description" aria-controls="pane-description" role="tab" tabindex="-1" class="el-tabs__item is-top">Description</div>
              <div id="tab-datasets" aria-controls="pane-datasets" role="tab" tabindex="-1" class="el-tabs__item is-top">Datasets (4)</div>
              <div id="tab-members" aria-controls="pane-members" role="tab" aria-selected="true" tabindex="0" class="el-tabs__item is-top is-active"><span>
          Members (2)
          <span class="notification"></span></span></div>
              <div id="tab-databases" aria-controls="pane-databases" role="tab" tabindex="-1" class="el-tabs__item is-top"><span><div class="el-badge sm-feature-badge">
            Databases (2)
          <transition-stub name="el-zoom-in-center"><sup class="el-badge__content el-badge__content--undefined is-fixed">New</sup></transition-stub></div></span></div>
            </div>
          </div>
        </div>
      </div>
      <div class="el-tabs__content">
        <!---->
        <!---->
        <div role="tabpanel" id="pane-members" aria-labelledby="tab-members" class="el-tab-pane">
          <groupmemberslist-stub currentuser="[object Object]" group="[object Object]" members="[object Object],[object Object],[object Object],[object Object]" refreshdata="function () { [native code] }"></groupmemberslist-stub>
          <!---->
        </div>
        <!---->
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`ViewGroupPage members tab should match snapshot (non-member) 1`] = `
<div class="page" mock-v-loading="false">
  <div class="page-content">
    <!---->
    <div class="header-row">
      <div class="header-names">
        <h1>group name</h1>
        <h2 class="ml-3 text-gray-600">
          (groupShortName)
        </h2>
      </div>
      <div class="header-buttons"><button type="button" class="el-button el-button--primary">
          <!---->
          <!----><span>
          Request access
        </span></button>
        <!---->
      </div>
      <!---->
    </div>
    <div class="with-badges el-tabs el-tabs--top">
      <div class="el-tabs__header is-top">
        <div class="el-tabs__nav-wrap is-top">
          <div class="el-tabs__nav-scroll">
            <div role="tablist" class="el-tabs__nav is-top" style="transform: translateX(-0px);">
              <div class="el-tabs__active-bar is-top" style="width: 0px; transform: translateX(NaNpx); webkit-transform: translateX(NaNpx);"></div>
              <div id="tab-description" aria-controls="pane-description" role="tab" tabindex="-1" class="el-tabs__item is-top">Description</div>
              <div id="tab-datasets" aria-controls="pane-datasets" role="tab" tabindex="-1" class="el-tabs__item is-top">Datasets (4)</div>
              <div id="tab-members" aria-controls="pane-members" role="tab" aria-selected="true" tabindex="0" class="el-tabs__item is-top is-active"><span>
          Members (2)
          <!----></span></div>
            </div>
          </div>
        </div>
      </div>
      <div class="el-tabs__content">
        <!---->
        <!---->
        <div role="tabpanel" id="pane-members" aria-labelledby="tab-members" class="el-tab-pane">
          <groupmemberslist-stub currentuser="[object Object]" group="[object Object]" members="[object Object]" refreshdata="function () { [native code] }"></groupmemberslist-stub>
          <p class="hidden-members-text">
            + 1 hidden member.
          </p>
        </div>
        <!---->
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`ViewGroupPage settings tab should match snapshot 1`] = `
<div class="page" mock-v-loading="false">
  <div class="page-content">
    <!---->
    <div class="header-row">
      <div class="header-names">
        <h1>group name</h1>
        <h2 class="ml-3 text-gray-600">
          (groupShortName)
        </h2>
      </div>
      <div class="header-buttons">
        <!---->
        <!---->
      </div>
      <!---->
    </div>
    <div class="with-badges el-tabs el-tabs--top">
      <div class="el-tabs__header is-top">
        <div class="el-tabs__nav-wrap is-top">
          <div class="el-tabs__nav-scroll">
            <div role="tablist" class="el-tabs__nav is-top" style="transform: translateX(-0px);">
              <div class="el-tabs__active-bar is-top" style="width: 0px; transform: translateX(NaNpx); webkit-transform: translateX(NaNpx);"></div>
              <div id="tab-description" aria-controls="pane-description" role="tab" tabindex="-1" class="el-tabs__item is-top">Description</div>
              <div id="tab-datasets" aria-controls="pane-datasets" role="tab" tabindex="-1" class="el-tabs__item is-top">Datasets (4)</div>
              <div id="tab-members" aria-controls="pane-members" role="tab" tabindex="-1" class="el-tabs__item is-top"><span>
          Members (2)
          <!----></span></div>
              <div id="tab-databases" aria-controls="pane-databases" role="tab" tabindex="-1" class="el-tabs__item is-top"><span><div class="el-badge sm-feature-badge">
            Databases (2)
          <transition-stub name="el-zoom-in-center"><sup class="el-badge__content el-badge__content--undefined is-fixed">New</sup></transition-stub></div></span></div>
              <div id="tab-settings" aria-controls="pane-settings" role="tab" aria-selected="true" tabindex="0" class="el-tabs__item is-top is-active">Settings</div>
            </div>
          </div>
        </div>
      </div>
      <div class="el-tabs__content">
        <!---->
        <!---->
        <!---->
        <!---->
        <div role="tabpanel" id="pane-settings" aria-labelledby="tab-settings" class="el-tab-pane">
          <div class="group-settings">
            <div class="header-row">
              <h2>Group Details</h2>
              <div class="flex-spacer"></div>
              <div class="header-row-buttons"><button type="button" class="el-button el-button--primary">
                  <!---->
                  <!----><span>
        Save
      </span></button></div>
            </div>
            <form class="el-form el-form--label-top">
              <div>
                <div class="el-form-item name is-required"><label for="name" class="el-form-item__label">Full name</label>
                  <div class="el-form-item__content">
                    <div class="el-input">
                      <!----><input type="text" autocomplete="off" max-length="50" class="el-input__inner">
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                    </div>
                    <transition-stub name="el-zoom-in-top">
                      <!---->
                    </transition-stub>
                  </div>
                </div>
                <div class="el-form-item shortName is-required"><label for="shortName" class="el-form-item__label"><span>
        Short name
        <mock-el-popover trigger="hover" placement="right"><div slot-key="default"> <p>The short name will be shown whenever space is limited.</p></div><div slot-key="reference"><i class="el-icon-question metadata-help-icon"></i></div></mock-el-popover></span></label>
                  <div class="el-form-item__content">
                    <div class="el-input">
                      <!----><input type="text" autocomplete="off" max-length="20" class="el-input__inner">
                      <!---->
                      <!---->
                      <!---->
                      <!---->
                    </div>
                    <transition-stub name="el-zoom-in-top">
                      <!---->
                    </transition-stub>
                  </div>
                </div>
              </div>
              <!---->
            </form>
            <div style="margin-bottom: 2em;">
              <h2>Custom URL</h2>
              <!---->
              <!---->
              <div>
                <p><a href="/group/00000000-1111-2222-3333-444444444444" class="router-link-active">
                    http://localhost/group/<span class="urlSlug">00000000-1111-2222-3333-444444444444</span></a></p>
                <p><a href="mailto:contact@metaspace2020.eu">Contact us</a> to set up a custom URL to showcase your group.</p>
              </div>
            </div>
            <!---->
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
